1999-08-25  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* internal.h (isDigit, isSpace, isPrint): New macros.

	* DefObject.m ([Object_s -lispIn:]): Use isDigit instead of isdigit.

	* internal.m (alignment_for_objc_type): Likewise.

	* Arguments.m (VARCHAR): Avoid using ctype macros.

	* DefObject.m ([Object_s -getDisplayName]): Return [self getName]
	if none set.

	* DefObject.[hm] ([Object_s -getIdName]): Remove.

	* directory.h (JAVA_APPNAME): Define to javaswarm.

	* Arguments.m: Include directory.h.
	([Arguments_c -createEnd]): If applicationName is
	JAVA_APPNAME_STRING (from directory.h), set executablePath to 0,
	otherwise pass argv0 to find_executable.

1999-08-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am ($(srcdir)/modulemap.c): Add change rule to srcdir but
	depend on protocol files.

1999-08-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* defobj.h: Add (id <Zone>) argument and return types.  Reorganize.
	Add (id <HDF5>) argument types.
	
	* HDF5Object.h (HDF5CompoundType_c): Implement HDF5CompoundType.
	(HDF5_c): Implement HDF5.

	* deftype.h (RETURNABLE): New protocol.

	* Program.m (_obj_initModule): Check for "RETURNABLE" as synonym
	to "CREATABLE".

1999-08-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m (swarm_directory_objc_type_for_java_class): New function.
	(swarm_directory_ensure_selector.add): Use it.

1999-08-19    <mgd@HELEN>

	* directory.m (get_class_name): Use env not jniEnv.
	Add DISABLE_ZONES macro switches for not depending on Zones
	(e.g. when you want to do debugging before initSwarm); changes
	throughout.
	(java_classname_for_typename, objcFindJavaClassName): New functions.
	([-objcFindJavaClass:]): Use objcFindJavaClassName.
	(create_class_refs): Set c_SwarmEnvironment.
	(swarm_directory_create_refs): New function.
	(get_swarmEnvironment_field): New function.
	(swarm_directory_init): Use both.  Rewrite to expect pre-instantiated
	SwarmEnvironment variables.
