@@ -49,6 +49,10 @@ lisp_process_array (const char *type,
 extern char *zstrdup (id aZone, const char *str);
 
 #define isDigit(ch) ((ch) >= '0' && (ch) <= '9')
-#define isSpace(ch) ((ch) == ' ' || (ch) == '\t' || (ch) == '\n' || (ch) == '\r')
-#define isPrint(ch) ((ch) < (unsigned char) 128)
-
+#define isSpace(ch) ((ch) == ' ' || (ch) == '\t' || (ch) == '\n' || (ch) == '\r' || (ch) == '\f')
+#define isUpper(ch) ((ch) >= 'A' && (ch) <= 'Z')
+#define isLower(ch) ((ch) >= 'a' && (ch) <= 'z')
+#define isAlpha(ch) (isUpper(ch) || isLower(ch))
+#define isAlnum(ch) (isAlpha(ch) || isDigit(ch))
+#define isPunct(ch) ((((ch) > ' ') && ((ch) < '0')) || (((ch) > '9') && ((ch) < 'A')) || (((ch) > 'Z') && ((ch) < 'a')) || (((ch) > 'z') && ((ch) <= '~')))
+#define isPrint(ch) (isPunct(ch) || isAlnum(ch) || ((ch) == ' '))
